Fix sonar issues in javatoscachecker
Remove this useless "instanceof" operator; it will always return "true".
Rename this local variable to match the regular expression '^[a-z][a-zA-Z0-9]*$'.
Merge this if statement with the enclosing one.

Issue-ID: MODELING-154
Change-Id: Id924377831825cd5d8d986ae2743cec16cb1c88e
Signed-off-by: Parshad Patel <pars.patel@samsung.com>